# hyperpolyglot

./: Cargo.toml  heuristics.yml
crates/py_polyglot_tokenizer/: Cargo.toml
src/: lib.rs
src/codegen/: disambiguation-heuristics-map.rs  extension-language-map.rs  interpreter-language-map.rs  languages.rs
src/detectors/: heuristics.rs
