[package]
name = "hyperpolyglot"
version = "0.1.7"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"
description = "A fast programming language detector"
homepage = "https://github.com/monkslc/hyperpolyglot"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/monkslc/hyperpolyglot"
exclude = ["samples/", "vendor.yml", "heuristics.yml", "documentation.yml", "languages.yml"]

[workspace]
members = ["crates/py_polyglot_tokenizer"]

[dependencies]
ignore = "0.4.20"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
phf = "0.11.2"
phf_codegen = "0.11.2"
regex = "1.9.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_yaml = "0.9"
polyglot_tokenizer = { path = "crates/polyglot_tokenizer", version = "0.2.1" }
